# BayesianVehicleModel

./: .gitignore  CMakeLists.txt  Makefile  UAV_CTmodel  UAV_CTmodel.cpp  dynamic.cpp  dynamic.h  inference.cpp  linpack_d_test.cpp  logPosterior_list.txt  obstacles.txt
data/: car_data.txt  car_data_old.txt  logPosterior_list.txt  obstacles.txt  reach-sets-5-2.csv  theta_list.txt  theta_list_Dubins.txt  theta_list_Dubins_2.txt
matlab/: Prob_collision.m  experiments.m  oracle.m  oracle.m.orig  runtime_monitor_Dubins_sampling.m  runtime_monitor_UAV.m  runtime_monitor_UAV_Reachability.m  runtime_monitor_UAV_sampling.m
matlab/Dubins_car/: computePosterior_Dubinsmodel.m  dubinsDynamic.m  make_obstacle.m  make_obstacle.m.orig  obs_zone_dubins.mat  plot_of_runtime_monitor_Dubins_sampling.m  plot_runtime_monitor_Dubins_reachable_set.m  runtime_monitor_Dubins_reachable_set.m  runtime_monitor_Dubins_sampling.m  sim_DubinsVehicleModel.m
outputs/: ct-model-10-1.csv  ct-model-10-2.csv  ct-model-10-steps-deg-2.txt  ct-model-15-1.csv  ct-model-15-2.csv  ct-model-15-steps-deg-2.txt  ct-model-5-1.csv  ct-model-5-2.csv  ct-model-5-steps-deg-2.txt  dubins-4-2-20.csv  dubins-4-2.csv  dubins-5-2.csv  dubins-5-steps-deg-2.txt
src/: CTModelGenerateReachabilityData.cpp  CTModelGenerateReachabilityData.hh  CTModelPolyForm.cpp  CTModelPolyForm.hh  CTModelPolyFormTest.cpp  CTModelPolyFormTest.cpp.cpp  DubinsPolyForm.cpp  DubinsPolyForm.hh  DubinsPolyFormTest.cpp  UAV_CTmodel  UAV_CTmodel.cpp  car_DubinsModel  car_DubinsModel.cpp  dynamic.cpp  dynamic.h  inference.cpp  inference.h
(+26 files in other folders)
